# webroll-server

./: Cargo.toml
migrations/2024-07-22-031200_initial/: down.sql  up.sql
src/: config.rs  extract.rs  main.rs  models.rs  schema.rs  state.rs  tasks.rs
src/msg/: client.rs
src/web/: api.rs  mod.rs  req.rs  resp.rs
