[package]
name = "webroll-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.35"
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["mobc", "postgres"] }
flate2 = "1.0.30"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
snafu = "0.8.3"
tar = "0.4.41"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
